# sndust

./: .gitignore  README.md  atomic_mass.py  deleteme.py  destroy.py  dust.py  environment.yml  erosionDict.py  gas.py  main.py  network.py  observer.py  particle.py  physical_constants.py  plot.py  print_msg.py  printer.py  restart_settings.json  runtime_settings.json  simulation_constants.py  size_dist_calc_parallelTEST.py  solver.py  sputterDict.py  sputterINPUT.py  stepper.py
data/: convert.py  easy_reactions.json  findShock.py  format.py  genProf.py  reactions.json  test_reactions.json
docs/ODE_integration/Oregonator/: CMakeLists.txt  README.md
docs/ODE_integration/Oregonator/src/: definitions.hpp  main.cpp  obs.hpp  params.hpp  system.hpp  varstat.hpp
numba_ode/: __init__.py  algorithms.py  buffer.py  common.py  compatibility.py  core.py  event_handler.py  utilities.py
numba_ode/multistep/: adams_bashforth.py  adams_moulton.py  bdf.py  core.py
numba_ode/runge_kutta/: core.py  diagonally_implicit.py  explicit.py  implicit.py  linearly_implicit.py  stabilized_explicit.py
runtime_configs/: runtime_settings.json  test_settings.json
util/: comp_help.py  helpers.py  network_generator.py  thermochem.py  timer.py  timers.py
util/fast_interp/: __init__.py  fast_interp.py
util/hydro_translate/: convert_fryhy_bin.f90  hdf5_upd.py
util/plotting/: nuplot.py
